# neural-models

./: README.md  pyproject.toml
src/models/neuron/: ohms_law.ipynb
