[tool.poetry]
name = "neural-models"
version = "0.0.1"
description = "Neural models implemented in Python"
authors = ["synek <roryofbyrne@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.2"
mne = "^0.21.0"
jupyter = "^1.0.0"
matplotlib = "^3.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
